fix: lazy load images (#2791)
* fix: lazy load images

* fix: lazy load images + add image sizes

* temp: disable img-size

* fix: use relative static path

* fix: update broken paths

* Update gitpod-yml.md

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "emoji-regex": "^10.0.0",
     "google-spreadsheet": "^3.1.15",
     "js-cookie": "^3.0.1",
-    "nanoid": "^4.0.0"
+    "nanoid": "^4.0.0",
+    "rehype-img-size": "^1.0.1"
   },
   "devDependencies": {
     "@netlify/functions": "^1.0.0",
