--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@netlify/functions": "^1.0.0",
+    "@octokit/plugin-paginate-graphql": "^2.0.1",
     "@sveltejs/adapter-netlify": "1.0.0-next.55",
     "@sveltejs/kit": "1.0.0-next.294",
     "@tailwindcss/typography": "^0.5.0",
