--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "prepare": "husky install",
     "generate:blog-post": "plop --plopfile ./generators/index.cjs blog-post",
     "generate:adr": "adr new",
-    "generate:jb": "node ./generators/ide/jb-gen.js",
+    "generate:jb": "node ./generators/ide/jb-gen.js && npm run check-links $(gp url 3000)/docs/references/ides-and-editors",
+    "check-links": "linkinator --concurrency 1000 --recurse --verbosity=error --skip 'https://(www.)?(notion.so|gitpod.io|github.com|linux.org|twitter.com|www.gitpodstatus.com|researchgate.net|news.ycombinator.com|discord.com|localhost|linkedin|android.com)' --skip '(png|jpg|svg|woff|js|css)$'",
     "cypress:open": "cypress open --browser firefox",
     "test:e2e": "cypress run --headless --browser firefox"
   },
@@ -60,6 +61,7 @@
     "hast-util-heading-rank": "^2.1.0",
     "hastscript": "^7.0.2",
     "husky": "^7.0.4",
+    "linkinator": "^4.1.1",
     "lint-staged": "^11.2.6",
     "mdast-util-to-string": "^3.1.0",
     "mdsvex": "^0.9.8",
