--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "svelte": "^3.46.2",
     "svelte-check": "^2.2.7",
     "svelte-focus-trap": "^1.2.0",
+    "svelte-lite-youtube-embed": "^1.1.0",
     "svelte-popperjs": "^1.2.8",
     "svelte-preprocess": "^4.9.8",
     "tailwindcss": "^3.0.0",
