--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
   "devDependencies": {
     "@netlify/functions": "^1.0.0",
     "@octokit/plugin-paginate-graphql": "^2.0.1",
-    "@sveltejs/adapter-netlify": "1.0.0-next.55",
-    "@sveltejs/kit": "1.0.0-next.294",
+    "@sveltejs/adapter-netlify": "1.0.0-next.58",
+    "@sveltejs/kit": "1.0.0-next.340",
     "@tailwindcss/typography": "^0.5.0",
     "@testing-library/cypress": "^8.0.7",
     "@tsconfig/svelte": "^2.0.1",
@@ -82,7 +82,7 @@
     "remark-slug": "^6.0.0",
     "sass": "^1.43.4",
     "svelte": "^3.46.2",
-    "svelte-check": "^2.2.7",
+    "svelte-check": "^2.9.2",
     "svelte-focus-trap": "^1.2.0",
     "svelte-lite-youtube-embed": "^1.1.0",
     "svelte-popperjs": "^1.2.8",
@@ -91,6 +91,11 @@
     "tslib": "^2.3.1",
     "typescript": "^4.7.4",
     "unist-util-visit": "^4.1.0"
+  },
+  "overrides": {
+    "@sveltejs/kit": {
+      "@sveltejs/vite-plugin-svelte": "1.0.0-next.44"
+    }
   },
   "lint-staged": {
     "*.{cjs,js,ts,css,scss,md,svelte}": "prettier --write"
