--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "watch:css": "run-p watch:css:*",
     "watch:css:global": "postcss src/lib/assets/global.css -o static/global.css -w",
     "watch:css:styles": "postcss src/lib/assets/styles.scss -o static/styles.css -w",
-    "watch:dev": "svelte-kit dev --host 0.0.0.0",
+    "watch:dev": "env-cmd --silent svelte-kit dev --host 0.0.0.0",
     "clean": "run-p clean:*",
     "clean:build": "rm -fr ./build",
     "clean:css": "rm -f static/global.css && rm -f static/styles.css",
@@ -35,11 +35,13 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.5.0",
+    "@types/uuid": "^8.3.4",
     "cookie": "^0.5.0",
     "emoji-regex": "^10.0.0",
     "google-spreadsheet": "^3.1.15",
     "js-cookie": "^3.0.1",
     "nanoid": "^4.0.0",
+    "node-fetch": "^3.2.10",
     "rehype-img-size": "^1.0.1"
   },
   "devDependencies": {
@@ -58,6 +60,7 @@
     "cssnano": "^5.0.8",
     "cypress": "^11.2.0",
     "encoding": "^0.1.13",
+    "env-cmd": "^10.1.0",
     "hast-util-heading-rank": "^2.1.0",
     "hastscript": "^7.0.2",
     "husky": "^7.0.4",
