--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -18,12 +18,11 @@ ports:
 
 # List the start up tasks. You can start them in parallel in multiple terminals. See https://www.gitpod.io/docs/configure/workspaces/tasks/
 tasks:
-  - init: npm install
   - name: Dev Server
+    init: npm install
     command: npm run dev
   - name: Forward Cypress Base URL
     command: |
-      gp ports await 3000
       export CYPRESS_BASE_URL=$(gp url 3000)
 
 github:
