--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "js-cookie": "^3.0.1",
     "nanoid": "^4.0.0",
     "node-fetch": "^3.2.10",
-    "rehype-img-size": "^1.0.1"
+    "rehype-img-size": "^1.0.1",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@netlify/functions": "^1.0.0",
@@ -55,6 +56,7 @@
     "@types/cookie": "^0.5.1",
     "@types/js-cookie": "^3.0.1",
     "@types/node-fetch": "^2.6.2",
+    "@types/validator": "^13.7.10",
     "adr": "^1.3.4",
     "autoprefixer": "^10.4.0",
     "cssnano": "^5.0.8",
