Use Node 18 lts in workspaces (#3292)
* fix: use node 18 lts in workspaces

* fix: nvm usage

* fix: gitpod yaml

* specify node version

* use node 18

Co-authored-by: Siddhant Khare <siddhant@gitpod.io>

--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "*.{cjs,js,ts,css,scss,md,svelte}": "prettier --write"
   },
   "engines": {
-    "npm": ">=6.0.0 <7"
+    "npm": ">=7.0.0",
+    "node": ">=16.0.0"
   }
 }
