--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "test:e2e": "cypress run --headless --browser firefox"
   },
   "dependencies": {
+    "@lottiefiles/lottie-player": "^1.6.3",
     "@sendgrid/mail": "^7.5.0",
     "@types/uuid": "^8.3.4",
     "cookie": "^0.5.0",
