--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "@lottiefiles/lottie-player": "^1.6.3",
     "@sendgrid/mail": "^7.5.0",
+    "@types/rss": "^0.0.30",
     "@types/uuid": "^8.3.4",
     "cookie": "^0.5.0",
     "emoji-regex": "^10.0.0",
@@ -43,6 +44,7 @@
     "nanoid": "^4.0.0",
     "node-fetch": "^3.2.10",
     "rehype-img-size": "^1.0.1",
+    "rss": "^1.2.2",
     "validator": "^13.7.0"
   },
   "devDependencies": {
