--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@netlify/functions": "^1.0.0",
     "@octokit/plugin-paginate-graphql": "^2.0.1",
     "@sveltejs/adapter-netlify": "1.0.0-next.69",
-    "@sveltejs/kit": "1.0.0-next.372",
+    "@sveltejs/kit": "1.0.0-next.373",
     "@tailwindcss/typography": "^0.5.0",
     "@testing-library/cypress": "^8.0.7",
     "@tsconfig/svelte": "^2.0.1",
@@ -99,11 +99,11 @@
     "tslib": "^2.3.1",
     "typescript": "^4.7.4",
     "unist-util-visit": "^4.1.0",
-    "vite": "^2.9.15"
+    "vite": "^3.2.5"
   },
   "overrides": {
     "@sveltejs/kit": {
-      "@sveltejs/vite-plugin-svelte": "1.0.0-next.49"
+      "@sveltejs/vite-plugin-svelte": "1.1.1"
     }
   },
   "lint-staged": {
