--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,7 +2,7 @@
 *.css     @Siddhant-K-code
 *.scss    @Siddhant-K-code
 *.js      @Siddhant-K-code
-*.ts      @Siddhant-K-code
-*.svelte  @Siddhant-K-code
+*.ts      @gitpod-io/team-website
+*.svelte  @gitpod-io/team-website
 *.json    @Siddhant-K-code
 *.yml     @Siddhant-K-code
