:sparkles: imrpove website devX (#3663)

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
 SEGMENT_KEY=<KEY FOR SEGMENT>
-VITE_CONFIGCAT_KEY=<Config Cat SDK Key>
+VITE_CONFIGCAT_KEY=OSzbCCd5YESN3ZtcqYIpkA/hIdf7b2yVUO0JcPsWa7Ktw
