--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,7 @@
 [functions]
   directory = "src/functions"
   node_bundler = "esbuild"
+  external_node_modules = ["mdsvex"]
 
 [dev]
   command = "npm run dev"
