Svelte Kit Updates (#3763)
* feat: update vite config

* chore: install sk 395

* refactor: switch to $env

* chore: remove env-cmd

* fix: uppercase endpoints

* fix: update env var

* fix: update adapter netlify

* chore: update to kit 405

* fix: where css is processed

* chore: update scripts

* fix: `.gitpod.yml` file with new dev preview

* chore: update vite config

---------

Co-authored-by: Siddhant Khare <siddhant@gitpod.io>

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,15 @@
-VITE_CONFIGCAT_KEY=OSzbCCd5YESN3ZtcqYIpkA/hIdf7b2yVUO0JcPsWa7Ktw
+PUBLIC_CONFIGCAT_KEY="OSzbCCd5YESN3ZtcqYIpkA/hIdf7b2yVUO0JcPsWa7Ktw"
+
+SEGMENT_KEY=""
+
+FEEDBACK_SHEET_ID=""
+FEEDBACK_GOOGLE_SERVICE_ACCOUNT_EMAIL=""
+FEEDBACK_GOOGLE_PRIVATE_KEY_BASE64=""
+
+SENDGRID_TO_EMAIL_CONTACT=""
+SENDGRID_TO_EMAIL_SALES=""
+SENDGRID_API_KEY=""
+
+USE_CACHE=""
+
+CHANGELOG_GITHUB_ACCESS_TOKEN=""
