--- a/.github/workflows/cypress-e2e-test.yml
+++ b/.github/workflows/cypress-e2e-test.yml
@@ -17,7 +17,7 @@ jobs:
           runTests: false
           install: false
         env:
-          VITE_CONFIGCAT_KEY: ${{ secrets.CONFIGCAT_KEY }}
+          PUBLIC_CONFIGCAT_KEY: ${{ secrets.CONFIGCAT_KEY }}
       - name: Run e2e tests 🧪
         uses: cypress-io/github-action@v4
         with:
