--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,7 +2,7 @@ image:
   file: .gitpod.Dockerfile
 
 ports:
-  - port: 3000
+  - port: 5173
     onOpen: open-preview
     visibility: public
     name: Website
@@ -25,7 +25,7 @@ tasks:
       npm run dev
   - name: Forward Cypress Base URL
     command: |
-      export CYPRESS_BASE_URL=$(gp url 3000)
+      export CYPRESS_BASE_URL=$(gp url 5173)
   - name: ADRs (Architecture Decision Records)
     command: |
       npm install -g adr
@@ -48,7 +48,7 @@ github:
     # add a "Review in Gitpod" button to the pull request's description (defaults to false)
     addBadge: true
     # add a label once the prebuild is ready to pull requests (defaults to false)
-    addLabel: false
+    addLabel: true
 
 vscode:
   extensions:
