--- a/package.json
+++ b/package.json
@@ -8,20 +8,9 @@
     "svelte"
   ],
   "scripts": {
-    "watch:css": "run-p watch:css:*",
-    "watch:css:global": "postcss src/lib/assets/global.css -o static/global.css -w",
-    "watch:css:styles": "postcss src/lib/assets/styles.scss -o static/styles.css -w",
-    "watch:dev": "env-cmd --silent vite dev --host 0.0.0.0",
-    "clean": "run-p clean:*",
-    "clean:build": "rm -fr ./build",
-    "clean:css": "rm -f static/global.css && rm -f static/styles.css",
-    "dev": "npm run clean && run-p watch:*",
-    "build": "run-s build:css build:svelte",
-    "build:css": "run-p build:css:*",
-    "build:css:global": "NODE_ENV=production postcss src/lib/assets/global.css -o static/global.css",
-    "build:css:styles": "NODE_ENV=production postcss src/lib/assets/styles.scss -o static/styles.css",
-    "build:svelte": "USE_CACHE=true vite build",
-    "deploy": "run-s clean build:css build:svelte",
+    "dev": "vite dev --host 0.0.0.0",
+    "build": "USE_CACHE=true vite build",
+    "deploy": "npm run build",
     "start": "vite preview",
     "validate": "svelte-check",
     "prepare": "svelte-kit sync && husky install",
@@ -52,8 +41,8 @@
   "devDependencies": {
     "@netlify/functions": "^1.0.0",
     "@octokit/plugin-paginate-graphql": "^2.0.1",
-    "@sveltejs/adapter-netlify": "1.0.0-next.69",
-    "@sveltejs/kit": "1.0.0-next.373",
+    "@sveltejs/adapter-netlify": "1.0.0-next.71",
+    "@sveltejs/kit": "1.0.0-next.405",
     "@tailwindcss/typography": "^0.5.0",
     "@testing-library/cypress": "^8.0.7",
     "@tsconfig/svelte": "^2.0.1",
@@ -65,7 +54,6 @@
     "cssnano": "^5.0.8",
     "cypress": "^11.2.0",
     "encoding": "^0.1.13",
-    "env-cmd": "^10.1.0",
     "hast-util-heading-rank": "^2.1.0",
     "hastscript": "^7.0.2",
     "husky": "^7.0.4",
