Fix: Scripts to handle `svelte-kit sync` (#3769)

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "build": "USE_CACHE=true vite build",
     "deploy": "npm run build",
     "start": "vite preview",
-    "validate": "svelte-check",
-    "prepare": "svelte-kit sync && husky install",
+    "validate": "svelte-kit sync && svelte-check",
+    "prepare": "husky install",
     "generate:blog-post": "plop --plopfile ./generators/index.cjs blog-post",
     "generate:adr": "adr new",
     "generate:changelog": "node ./scripts/generate-changelog.js",
