Revert css logic to fix CSS overiding bug (#3777)

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   ],
   "scripts": {
     "dev": "vite dev --host 0.0.0.0",
-    "build": "USE_CACHE=true vite build",
+    "build": "npm run build:postcss && USE_CACHE=true vite build",
+    "build:postcss": "NODE_ENV=production postcss src/lib/assets/global.css -o static/global.css && NODE_ENV=production postcss src/lib/assets/styles.scss -o static/styles.css",
     "deploy": "npm run build",
     "start": "vite preview",
     "validate": "svelte-kit sync && svelte-check",
