--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "svelte"
   ],
   "scripts": {
-    "dev:postcss": "postcss src/lib/assets/global.css -o static/global.css && postcss src/lib/assets/styles.scss -o static/styles.css",
-    "dev": "npm run dev:postcss && vite dev --host 0.0.0.0",
+    "watch:css": "run-p watch:css:*",
+    "watch:css:global": "postcss src/lib/assets/global.css -o static/global.css -w",
+    "watch:css:styles": "postcss src/lib/assets/styles.scss -o static/styles.css -w",
+    "watch:dev": "vite dev --host 0.0.0.0",
+    "clean": "run-p clean:*",
+    "clean:build": "rm -fr ./build",
+    "clean:css": "rm -f static/global.css && rm -f static/styles.css",
+    "dev": "npm run clean && run-p watch:*",
     "build:postcss": "NODE_ENV=production postcss src/lib/assets/global.css -o static/global.css && NODE_ENV=production postcss src/lib/assets/styles.scss -o static/styles.css",
     "build": "npm run build:postcss && USE_CACHE=true vite build",
     "deploy": "npm run build",
@@ -63,6 +69,7 @@
     "lint-staged": "^11.2.6",
     "mdast-util-to-string": "^3.1.0",
     "mdsvex": "^0.9.8",
+    "npm-run-all": "^4.1.5",
     "octokit": "^2.0.22",
     "plop": "^3.0.5",
     "postcss": "^8.4.4",
